--- a/web/index.html
+++ b/web/index.html
@@ -14,10 +14,12 @@
 </head>
 
 <body>
-  <h1>Teste</h1>
-  <h2>Testeh2</h2>
-  <h3>Testeh3</h3>
-  <p>Teste paragrafo</p>
+  <section class="flexbox">
+    <div class="grid-4">item1</div>
+    <div class="grid-4">item2</div>
+    <div class="grid-4">item3</div>
+  </section>
+
 </body>
 
 </html>
