--- a/web/index.html
+++ b/web/index.html
@@ -14,11 +14,13 @@
 </head>
 
 <body>
-  <section class="flexbox">
-    <div class="grid-4">item1</div>
-    <div class="grid-4">item2</div>
-    <div class="grid-4">item3</div>
+  <section class="gridlayout">
+    <div>Item 1</div>
+    <div>Item 2</div>
+    <div>Item 3</div>
+    <div>Item 4</div>
   </section>
+
 
 </body>
 
